# E-mail_openenvi

./: Dockerfile  README.md  client.py  inference.py  openenv.yaml  pyproject.toml  requirements.txt  test_env.py
server/: app.py  email_triage_environment.py  models.py
static/: index.html
